...
                        .tabItem {
                            Label("Summary", systemImage: "chart.bar")
                        }

                    ToDoListView(toDos: toDos.filter { !$0.isCompleted }, showGradient: true)
                        .tabItem {
                            Label("All tasks", systemImage: "list.bullet")
                        }

                    ToDoListView(
                        toDos: toDos.filter {
                            !$0.isCompleted &&
                            ($0.plannedDate ?? Date()) >= Date() &&
...
                                .background(
                                    Circle()
                                        .fill(Color.red.opacity(0.8))
                                        .frame(width: 24, height: 24)
                                )
                        }
                        .accessibilityIdentifier("addTaskButton")
                        .padding(.trailing, 26)
                        .padding(.bottom, 72)
                    }
                }
            }
            .fullScreenCover(isPresented: $isPresentingAddForm) {
...
